--- a/tugas/.vscode/settings.json
+++ b/tugas/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "java.project.sourcePaths": [
-        "punya","tugassore","plagiat",
-        ""
+        "tugassore",
+        "punya",
+        "plagiat",
+        
     ]
 }
